RESOLVED FIXED44607
Web Inspector: lazily request frontend settings instead of pushing them on connect
https://bugs.webkit.org/show_bug.cgi?id=44607
Summary Web Inspector: lazily request frontend settings instead of pushing them on co...
Yury Semikhatsky
Reported 2010-08-25 06:26:25 PDT
Web Inspector: lazily request frontend settings instead of pushing them on connect. This is the first step to having all panels populated lazily. We will need this to keep remote debugging protocol clean so that remote client can request only the data it needs instead of processing tons of them after connecting to the backend.
Attachments
Patch (14.33 KB, patch)
2010-08-25 06:30 PDT, Yury Semikhatsky
pfeldman: review+
Yury Semikhatsky
Comment 1 2010-08-25 06:30:14 PDT
Pavel Feldman
Comment 2 2010-08-25 06:58:40 PDT
Comment on attachment 65410 [details] Patch WebCore/inspector/front-end/ProfilesPanel.js:204 + this._requestedProfiles = false; this._profilesWereRequested; WebCore/inspector/Inspector.idl:102 + [handler=Controller] void populateScriptObjects(); Please comment that it should be further split into the parts.
Yury Semikhatsky
Comment 3 2010-08-25 07:19:39 PDT
(In reply to comment #2) > (From update of attachment 65410 [details]) > WebCore/inspector/front-end/ProfilesPanel.js:204 > + this._requestedProfiles = false; > this._profilesWereRequested; > WebCore/inspector/Inspector.idl:102 > + [handler=Controller] void populateScriptObjects(); > Please comment that it should be further split into the parts. All done. Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/html/HTMLDocument.cpp M WebCore/inspector/Inspector.idl M WebCore/inspector/InspectorController.cpp M WebCore/inspector/InspectorController.h M WebCore/inspector/front-end/ProfilesPanel.js M WebCore/inspector/front-end/Settings.js M WebCore/inspector/front-end/inspector.js Committed r66012
Note You need to log in before you can comment on or make changes to this bug.