2010-08-25  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: lazily request frontend settings instead of pushing them on connect
        https://bugs.webkit.org/show_bug.cgi?id=44607

        * html/HTMLDocument.cpp:
        (WebCore::HTMLDocument::createParser):
        * inspector/Inspector.idl:
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::getSettings):
        (WebCore::InspectorController::connectFrontend):
        (WebCore::InspectorController::populateScriptObjects): this method is now called explicitely from the frontend,
        it should be gone eventually once all panels request initial data lazily.
        * inspector/InspectorController.h:
        * inspector/front-end/ProfilesPanel.js:
        (WebInspector.ProfilesPanel.prototype.show):
        (WebInspector.ProfilesPanel.prototype.profilerWasEnabled):
        (WebInspector.ProfilesPanel.prototype._reset):
        * inspector/front-end/Settings.js:
        (WebInspector.Settings):
        (WebInspector.Settings.initialize.populateApplicationSettings):
        (WebInspector.Settings.initialize.populateSessionSettings):
        (WebInspector.Settings.initialize):
        * inspector/front-end/inspector.js:
        (WebInspector.doLoadedDone):


Canonical link: https://commits.webkit.org/56791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66012 268f45cc-cd09-0410-ab3c-d52691b4dbfc